--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@
     color: chartreuse; 
   }
 
-  #addgiftext {
+  .addgiftext {
     font-family: 'Baloo Chettan', cursive;
     -webkit-text-stroke: 0.5px black;
     color: blue; 
